* V1.17.0.1 
  * Added ck list_tags {CID} to list all tags from found entries (uses search function)
  * Converted python files to PEP8 style using autopep8
  * Fixed bug with "ck unzip repo" if ckr.zip if not present

* V1.17.0
  * Updated description of all CK APIs in Google format!
  * Added support to load YAML files via CK CLI: ck action @file.yaml
  * Fixed Yaml loader
  * Added support to download components with depenendecies from cKnowledge.io
  * Fixed issue when adding the "init" action to modules (this function always exists in CK modules).
    We create "new_init" function in such case.
  * Checking all function names in the CK module when adding a new action
  * Added simplified "ck init repo" to create a CK repository in the current directory
  * Added docs about "ck init repo"

* V1.15.0
  * Improved the integration with the open CK portal: https://cKnowledge.io
  * Fixed installation in virtual env / pip for Linux/Windows
  * Started working on a new Sphinx-based documentation
  * Check missing modules at cKnowledge.io
    (can be turned off by "ck set kernel --var.check_missing_modules=no")
  * Fixed ck.bat for Windows when CK is used from GitHub
  * Fixed ElasticSearch indexing error when index is empty
  * Fixed remote repo access
  * Added experimental mode to support multiple aliases for the same UID
    to be able to push renamed components to the cKnowledge.io portal
  * Started breaking CK kernel into sub modules:
    https://github.com/ctuning/ck/issues/107
  * Started improving ck scripts to automatically detect installation (Linux and Windows):
    https://github.com/ctuning/ck/issues/106
  * Added support to download missing components from cKnowledge.io

* V1.12.3
  * improved tests on Linux, MacOS and Windows
  * prototyped testing of the status of repositories (stable and warning)

* V1.12.2
  * fixed UTF-8 problem with README.md in setup.py

* V1.12.1
  * added first draft of the docs in the Sphinx format
  * fixed repo update